syntax = "proto3";

option go_package = "github.com/jwolski2/nil-extended/pkg/proto";

message RegisterRequest {
    string user = 1;
    int64 y1 = 2;
    int64 y2 = 3;
}

message RegisterResponse {}

message AuthenticationChallengeRequest {
    string user = 1;
    int64 r1 = 2;
    int64 r2 = 3;
}

message AuthenticationChallengeResponse {
    string auth_id = 1;
    int64 c = 2;
}

message AuthenticationAnswerRequest {
    string auth_id = 1;
    int64 s = 2;
}

message AuthenticationAnswerResponse {
    string session_id = 1;
}

service Auth {
    rpc CreateAuthenticationChallenge(AuthenticationChallengeRequest) returns (AuthenticationChallengeResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc VerifyAuthentication(AuthenticationAnswerRequest) returns (AuthenticationAnswerResponse) {}
}
